<resources>
    <string name="app_name">Nibo</string>
    <string name="title_activity_origin_destination_picker">OriginDestinationPickerActivity</string>
    <string name="speak_now">Speak now</string>

    <string name="BottomSheetBehaviorGoogleMapsLike">com.alium.nibo.lib.BottomSheetBehaviorGoogleMapsLike</string>

    <string name="time_distance" formatted="false">%s, %s</string>
    <string name="origin_to_dest_text" formatted="false">%s - %s</string>

    <string name="origin_hint">select a starting point</string>
    <string name="destination_hint">destination hint</string>
    <string name="enter_flat_no_landmark">Enter Flat No / Landmark</string>
    <string name="set_delivery_location">Set Delivery location</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="error_finding_suggestions">Error finding suggestions, please try another set.</string>
    <string name="retry_title">RETRY</string>
    <string name="user_address_change_info"> Your cart will be emptied if you change your address. Are you sure you want to proceed?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="landmark_error">Please enter Flat No/Landmark</string>
    <string name="search_txt">Search</string>
    <string name="saved_location">Saved Locations</string>
    <string name="language">en</string>
    <string name="disapproved">Disapproved</string>
    <string name="approved">Approved</string>



</resources>
