<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adjust">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_marker" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/center_my_location_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_crosshairs_gps_def"
            app:backgroundTint="#FFFFFF"
            app:rippleColor="@color/colorPrimary" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/adjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/location_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:visibility="visible">


            <TextView
                android:id="@+id/tv_title_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:fontFamily="@font/helvetica_medium"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/set_delivery_location"
                android:textColor="@android:color/primary_text_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_choose_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableEnd="@drawable/ic_arrow_right_orange"
                android:textSize="16sp"
                android:fontFamily="@font/helvetica_regular"
                android:textColor="@color/colorAccent"
                android:text="@string/saved_location"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                app:fontFamily="@font/helvetica_light"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:text="Location"
                android:textColor="@color/default_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/geocode_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                app:fontFamily="@font/helvetica_medium"
                android:gravity="center|start"
                android:maxLines="5"
                android:minHeight="60dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:singleLine="false"
                android:text="Getting location please wait..."
                android:textColor="@android:color/primary_text_light"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/label_landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:fontFamily="@font/helvetica_light"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:text="FLAT NO / LANDMARK"
                android:textColor="@color/default_text_color"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/et_landmark"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_flat_no_landmark"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
                android:visibility="gone"
                android:paddingEnd="6dp"
                android:paddingRight="6dp"
                android:singleLine="true"
                android:textSize="14sp"
                app:backgroundTint="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center">


                <Button
                    android:id="@+id/pick_location_btn"
                    style="@style/square_btn"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_margin="10dp"
                    android:enabled="false"
                    app:fontFamily="@font/helvetica_medium"
                    android:text="CONFIRM LOCATION"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


    <com.alium.nibo.autocompletesearchbar.NiboPlacesAutoCompleteSearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:elevation="4dp"
        android:visibility="visible"
        app:niboSV_customToolbarHeight="64dp"
        app:niboSV_displayMode="screen_toolbar"
        app:niboSV_editHintText="@string/search_txt"
        app:niboSV_editHintTextColor="?android:textColorHint"
        app:niboSV_editTextColor="?android:textColorPrimary"
        app:niboSV_homeButtonMode="nibo_arrow"
        app:niboSV_logoString="@string/search_txt"
        app:niboSV_searchCardElevation="2dp"
        app:niboSV_searchTextColor="?android:textColorPrimary" />


</RelativeLayout>
